Additional api (#4)
* GET chats API, profiling, tuning up example html, fixing security issue

* User API, Chat API

* Change driver

* sending messages to all other users from each default user

* Contacts API

* Messages API

* Adding swagger

* improved websockets usage for template message sending

* API for sending, editing, deleting messages

* CORS fixing

* CORS fixing v2.0

* CORS fixing v3.0

Co-authored-by: Kostiantyn Vozniuk <kv@xtendx.com>
Co-authored-by: asteof <kirill.brezhnev02@gmail.com>