@@ -1,14 +1,19 @@
 package com.ntu.messenger.api.service;
 
+import com.ntu.messenger.api.criteria.MessageCriteria;
 import com.ntu.messenger.data.dto.message.MessageSendDto;
+import com.ntu.messenger.data.dto.message.MessageUpdateDto;
 import com.ntu.messenger.data.model.Chat;
 import com.ntu.messenger.data.model.Message;
+import com.ntu.messenger.data.model.User;
 import com.ntu.messenger.data.repository.MessageRepository;
 import lombok.RequiredArgsConstructor;
 import org.hibernate.Hibernate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import javax.persistence.EntityNotFoundException;
+import java.util.Arrays;
 import java.util.List;
 
 @Service
@@ -18,7 +23,6 @@ public class MessageService {
     private final ChatService chatService;
     private final UserService userService;
     private final MessageRepository messageRepository;
-
 
     @Transactional
     public Message saveMessage(MessageSendDto messageSendDto) {
@@ -35,12 +39,55 @@ public class MessageService {
         return message;
     }
 
+    @Transactional(readOnly = true)
+    public List<Message> getMessagesByChatId(Long chatId, User requester, MessageCriteria messageCriteria) {
+        verifyThatUserHasAccess(requester, chatId);
+        Integer size = messageCriteria.getSize();
+        Integer page = messageCriteria.getPage();
+        return messageRepository.getMessagesByChatId(chatId, size, page * size);
+    }
+
+    @Transactional(readOnly = true)
+    public Message getChatLastMessage(Long chatId, User requester) {
+        verifyThatUserHasAccess(requester, chatId);
+        return messageRepository.getLastMessageByChatId(chatId);
+    }
+
+    @Transactional
+    public void deleteMessage(Long messageId, User requester) {
+        Message msg = messageRepository.findById(messageId).orElseThrow(EntityNotFoundException::new);
+        verifyUserCanModifyMessage(requester, msg);
+        messageRepository.delete(msg);
+    }
+
+    @Transactional
+    public void modifyMessage(Long messageId, User requester, MessageUpdateDto messageUpdateDto) {
+        Message msg = messageRepository.findById(messageId).orElseThrow(EntityNotFoundException::new);
+        verifyUserCanModifyMessage(requester, msg);
+        msg.setText(messageUpdateDto.getText());
+    }
+
+    private void verifyThatUserHasAccess(User user, Long chatId) {
+        Chat chat = chatService.getChatById(chatId);
+        if (chat.getChatParticipants().contains(user)) {
+            return;
+        }
+        throw new EntityNotFoundException("Access denied");
+    }
+
+    private void verifyUserCanModifyMessage(User user, Message message) {
+        if (message.getSender().equals(user)) {
+            return;
+        }
+        throw new EntityNotFoundException("Access denied");
+    }
+
     private void createChatIfNotExists(MessageSendDto messageSendDto, Message message) {
         Chat chat = chatService.getChatByParticipants(messageSendDto.getSenderId(), messageSendDto.getRecipientId());
         if (chat != null) {
             message.setChat(chat);
         } else {
-            Chat newChat = chatService.createChatBetween(List.of(messageSendDto.getRecipientId(), messageSendDto.getSenderId()));
+            Chat newChat = chatService.createChatBetween(Arrays.asList(messageSendDto.getRecipientId(), messageSendDto.getSenderId()));
             message.setChat(newChat);
         }
     }
